--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,8 @@ plugins {
     id 'application'
     id 'java'
     id 'jacoco'
-    id 'checkstyle'
-    id 'pmd'
+    // id 'checkstyle'
+    // id 'pmd'
     id 'com.github.spotbugs' version '1.7.1'
 }
 
